tests/src/frontend/syntax/invalid/matches_paren_name.sk
fun main(): void {
  a is (b);
}
